# hass-eaton-ups-mqtt

./: .devcontainer.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  MQTT.md  README.md  hacs.json  mqtt-data.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: checks.yml  lint.yml  test.yml
config/: configuration.yaml
custom_components/eaton_ups/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/eaton_ups_mqtt/: __init__.py  api.py  binary_sensor.py  certificates.py  config_flow.py  const.py  coordinator.py  data.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/eaton_ups_mqtt/translations/: en.json
docs/: MQTT.md  eaton-network-m2-openapi.yaml  eaton-network-m2-postman.json
scripts/: convert_postman_to_openapi.py  develop  dump_mqtt_data.py  profile_mqtt_topics.py  sanitize_fixture.py
tests/: __init__.py  conftest.py  test_const.py
tests/fixtures/: mqtt_data_5px_2200_g2_m3.json  mqtt_data_5px_g2.json
tests/integration/: __init__.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py
tests/scenario/: __init__.py  test_5px_2200_g2_m3.py  test_5px_g2.py
tests/unit/: __init__.py  test_api.py  test_binary_sensor.py  test_certificate_handling.py  test_certificates.py  test_entity_descriptions.py  test_tls_pinning.py  test_try_connection.py  test_value_conversion.py
