[project]
name = "hass-eaton-ups-mqtt"
version = "0.2.2"
description = "Home Assistant integration for Eaton UPS devices via MQTT"
authors = [
    { name = "lnagel" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant>=2025.3.1",
    "paho-mqtt==2.1.0",
    "ruff==0.14.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]
dev = [
    "bump-my-version>=1.1.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist

)/
'''

[tool.bumpversion]
current_version = "0.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock && git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "custom_components/eaton_ups_mqtt/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'
