[project]
name = "hass-eaton-ups-mqtt"
version = "0.2.2"
description = "Home Assistant integration for Eaton UPS devices via MQTT"
authors = [
    { name = "lnagel" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant>=2025.3.1",
    "paho-mqtt==2.1.0",
    "ruff==0.14.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]
dev = [
    "bump-my-version>=1.1.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist

)/
'''

[tool.bumpversion]
current_version = "0.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock && git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "custom_components/eaton_ups_mqtt/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -p no:pytest_homeassistant_custom_component -p no:pytest_aiohttp"

[tool.coverage.run]
source = ["custom_components.eaton_ups_mqtt"]
branch = true
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
precision = 0
fail_under = 15
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.xml]
output = "coverage.xml"
